[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "locomotive"
version = "0.1.0"
description = "CI/CD load testing runner and regression analyzer for Locust"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
loco = "locomotive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["locomotive*"]
